# mypersonalnetflix

./: .gitignore  Procfile  config.json  linkliste.txt  main.py  pyproject.toml  readme.md  requirements.txt  setup.py  videos2db.py
backend/: backend_api.py  video_service.py  videos2db.py
backend/src/: base_source.py  create_gif_preview.py  create_preview.py  db_helper.py  local_source.py  video_processor.py  youtube_source.py  youtube_url_checker.py
data/: videos.db
data/OliverIlnicki/: video_data.json
data/oliver2/: video_data.json
data/testdata/: 7102266-hd_1920_1080_30fps.mp4:Zone.Identifier  GSFC_20140421_EarthOrbit_m11525~medium.mp4:Zone.Identifier  corrupt_video.txt  sprachtest.txt  wester_haus.txt
deprecated/: ETL_try2.py  old_main.py  youtube-preview-gif-creator.py  youtube_url_checker.py
frontend/: frontend_app.py
frontend/static/css/: style.css
frontend/templates/: error_template.html  index.html  watch.html
src/: base_source.py  create_gif_preview.py  create_preview.py  db_helper.py  local_source.py  video_processor.py  youtube_source.py  youtube_url_checker.py
static/css/: style.css
templates/: index.html  watch.html
tests/: test-local-source.py  test_backend_api.py  test_create_preview.py  test_db_helper.py  test_frontend_app.py  test_gif_preview.py  test_local_source.py  test_main.py  test_video_processor.py  test_video_processor.txt  test_video_service.py  test_videos2db.py  test_videos2db.txt  test_youtube_source.py  test_youtube_source.txt  test_youtube_url_checker.py
