[project]
name = "mypersonalnetflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "moviepy>=2.1.2",
    "pip>=25.0.1",
    "pytube>=15.0.0",
    "pytubefix>=8.12.2",
    "requests>=2.32.3",
]
