[project]
name = "mypersonalnetflix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "ffmpeg>=1.4",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "moviepy>=2.1.2",
    "pip>=25.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytube>=15.0.0",
    "pytubefix>=8.12.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
